[gd_scene load_steps=12 format=2]

[ext_resource path="res://Snake/SnakeHead.gd" type="Script" id=1]
[ext_resource path="res://Textures/Icons/Level.png" type="Texture" id=2]
[ext_resource path="res://Textures/Icons/Health.png" type="Texture" id=3]
[ext_resource path="res://Textures/Icons/EXP.png" type="Texture" id=4]
[ext_resource path="res://Textures/Icons/Coin.png" type="Texture" id=5]
[ext_resource path="res://Textures/Icons/Shield.png" type="Texture" id=6]
[ext_resource path="res://Textures/Icons/Atk_Fis.png" type="Texture" id=7]
[ext_resource path="res://Textures/Icons/Atk_Mag.png" type="Texture" id=8]
[ext_resource path="res://Textures/Icons/Armor.png" type="Texture" id=9]
[ext_resource path="res://Textures/Icons/SnakeLenIcon.png" type="Texture" id=10]
[ext_resource path="res://Fonts/Basis33.tres" type="DynamicFont" id=12]

[node name="Snakehead" type="Position2D" groups=["SnakeHead"]]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
rect_pivot_offset = Vector2( 8, 8 )
color = Color( 0.0392157, 0.682353, 0, 1 )

[node name="Timer" type="Timer" parent="."]

[node name="Camera" type="Camera2D" parent="."]
z_index = 300
current = true
smoothing_enabled = true
smoothing_speed = 10.0

[node name="PlayerInfos" type="GridContainer" parent="Camera"]
margin_left = -499.0
margin_top = 3.0
margin_right = -441.0
margin_bottom = 291.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 0
columns = 2

[node name="LV" type="TextureRect" parent="Camera/PlayerInfos"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="LEVEL" type="Label" parent="Camera/PlayerInfos" groups=["LEVEL_LABEL"]]
margin_left = 40.0
margin_right = 54.0
margin_bottom = 32.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_fonts/font = ExtResource( 12 )
text = "0"
align = 1
valign = 1

[node name="XP" type="TextureRect" parent="Camera/PlayerInfos"]
margin_top = 32.0
margin_right = 32.0
margin_bottom = 64.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="EXP" type="Label" parent="Camera/PlayerInfos" groups=["EXP_LABEL"]]
margin_left = 40.0
margin_top = 32.0
margin_right = 54.0
margin_bottom = 64.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_fonts/font = ExtResource( 12 )
text = "0"
align = 1
valign = 1

[node name="CO" type="TextureRect" parent="Camera/PlayerInfos"]
margin_top = 64.0
margin_right = 32.0
margin_bottom = 96.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="COINS" type="Label" parent="Camera/PlayerInfos" groups=["COINS_LABEL"]]
margin_left = 40.0
margin_top = 64.0
margin_right = 54.0
margin_bottom = 96.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_fonts/font = ExtResource( 12 )
text = "0"
align = 1
valign = 1

[node name="HE" type="TextureRect" parent="Camera/PlayerInfos"]
margin_top = 96.0
margin_right = 32.0
margin_bottom = 128.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="HEALTH" type="Label" parent="Camera/PlayerInfos" groups=["HEALTH_LABEL"]]
margin_left = 40.0
margin_top = 96.0
margin_right = 54.0
margin_bottom = 128.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_fonts/font = ExtResource( 12 )
text = "0"
align = 1
valign = 1

[node name="SH" type="TextureRect" parent="Camera/PlayerInfos"]
margin_top = 128.0
margin_right = 32.0
margin_bottom = 160.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="SHIELD" type="Label" parent="Camera/PlayerInfos" groups=["SHIELD_LABEL"]]
margin_left = 40.0
margin_top = 128.0
margin_right = 54.0
margin_bottom = 160.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_fonts/font = ExtResource( 12 )
text = "0"
align = 1
valign = 1

[node name="AR" type="TextureRect" parent="Camera/PlayerInfos"]
margin_top = 160.0
margin_right = 32.0
margin_bottom = 192.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 9 )
expand = true
stretch_mode = 6

[node name="ARMOR" type="Label" parent="Camera/PlayerInfos" groups=["ARMOR_LABEL"]]
margin_left = 40.0
margin_top = 160.0
margin_right = 54.0
margin_bottom = 192.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_fonts/font = ExtResource( 12 )
text = "0"
align = 1
valign = 1

[node name="DF" type="TextureRect" parent="Camera/PlayerInfos"]
margin_top = 192.0
margin_right = 32.0
margin_bottom = 224.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="DMGFIS" type="Label" parent="Camera/PlayerInfos" groups=["DMGFIS_LABEL"]]
margin_left = 40.0
margin_top = 192.0
margin_right = 54.0
margin_bottom = 224.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_fonts/font = ExtResource( 12 )
text = "0"
align = 1
valign = 1

[node name="DM" type="TextureRect" parent="Camera/PlayerInfos"]
margin_top = 224.0
margin_right = 32.0
margin_bottom = 256.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 8 )
expand = true
stretch_mode = 6

[node name="DMGMAG" type="Label" parent="Camera/PlayerInfos" groups=["DMGMAG_LABEL"]]
margin_left = 40.0
margin_top = 224.0
margin_right = 54.0
margin_bottom = 256.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_fonts/font = ExtResource( 12 )
text = "0"
align = 1
valign = 1

[node name="LEN" type="TextureRect" parent="Camera/PlayerInfos"]
margin_top = 256.0
margin_right = 32.0
margin_bottom = 288.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 10 )
expand = true
stretch_mode = 6

[node name="SNAKELEN" type="Label" parent="Camera/PlayerInfos" groups=["SNAKELEN_LABEL"]]
margin_left = 40.0
margin_top = 256.0
margin_right = 54.0
margin_bottom = 288.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_fonts/font = ExtResource( 12 )
text = "0"
align = 1
valign = 1

[node name="ActionsLog" type="GridContainer" parent="Camera"]
margin_left = 392.0
margin_top = -288.0
margin_right = 498.0
margin_bottom = 288.0

[node name="Options" type="ColorRect" parent="Camera"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -208.0
margin_top = -208.0
margin_right = 208.0
margin_bottom = 208.0
color = Color( 0.596078, 0.596078, 0.596078, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Op" type="ColorRect" parent="Camera/Options"]
margin_left = 16.0
margin_top = 16.0
margin_right = 400.0
margin_bottom = 400.0
color = Color( 0.113725, 0.113725, 0.113725, 1 )

[node name="Grid" type="GridContainer" parent="Camera/Options/Op"]
margin_right = 384.0
margin_bottom = 384.0

[node name="Label" type="Label" parent="Camera/Options/Op/Grid"]
margin_right = 384.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "
OPTIONS"
align = 1
valign = 1

[node name="CameraSmooth" type="CheckBox" parent="Camera/Options/Op/Grid"]
pause_mode = 2
margin_left = 127.0
margin_top = 35.0
margin_right = 256.0
margin_bottom = 59.0
focus_mode = 0
size_flags_horizontal = 4
enabled_focus_mode = 0
text = "Smooth Camera"
align = 1

[node name="Helper" type="ColorRect" parent="Camera"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -256.0
margin_right = 320.0
margin_bottom = 256.0
color = Color( 0.596078, 0.596078, 0.596078, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="He" type="ColorRect" parent="Camera/Helper"]
margin_left = 16.0
margin_top = 16.0
margin_right = 624.0
margin_bottom = 496.0
color = Color( 0.113725, 0.113725, 0.113725, 1 )

[node name="Grid" type="GridContainer" parent="Camera/Helper/He"]
margin_right = 608.0
margin_bottom = 480.0

[node name="Label" type="Label" parent="Camera/Helper/He/Grid"]
margin_right = 608.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Snake Dungeon Helper"
align = 1
valign = 1

[node name="Scroll" type="ScrollContainer" parent="Camera/Helper/He/Grid"]
margin_top = 18.0
margin_right = 608.0
margin_bottom = 480.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="Camera/Helper/He/Grid/Scroll"]
margin_right = 608.0
margin_bottom = 462.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Interactables" type="ScrollContainer" parent="Camera/Helper/He/Grid/Scroll/VBox"]
margin_right = 608.0
margin_bottom = 229.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="Camera/Helper/He/Grid/Scroll/VBox/Interactables"]
margin_right = 608.0
margin_bottom = 229.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Grid" type="GridContainer" parent="Camera/Helper/He/Grid/Scroll/VBox/Interactables/VBox"]
margin_right = 608.0
margin_bottom = 229.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Other" type="ScrollContainer" parent="Camera/Helper/He/Grid/Scroll/VBox"]
margin_top = 233.0
margin_right = 608.0
margin_bottom = 462.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="Camera/Helper/He/Grid/Scroll/VBox/Other"]
margin_right = 608.0
margin_bottom = 229.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="toggled" from="Camera/Options/Op/Grid/CameraSmooth" to="." method="_on_CameraSmooth_toggled"]
